plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}

android {
    namespace 'com.example.testtest'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.testtest"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    
    buildFeatures {
        viewBinding true
    }
    
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    
    kotlinOptions {
        jvmTarget = '17'
    }
    
    testOptions {
        unitTests.all {
            it.useJUnitPlatform()
            it.jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
        }
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.12.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    
    // Lifecycle
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
    
    // Koin
    implementation "io.insert-koin:koin-android:3.5.3"
    implementation "io.insert-koin:koin-androidx-navigation:3.5.3"
    
    // Gson
    implementation 'com.google.code.gson:gson:2.10.1'
    
    // Тестирование - используем одинаковые версии
    testImplementation 'junit:junit:4.13.2'
    
    // AndroidX Test
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestUtil 'androidx.test:orchestrator:1.5.0'
    
    // Espresso - используем одну версию для всех компонентов
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
    
    // Koin для тестирования
    testImplementation "io.insert-koin:koin-test:3.5.3"
    testImplementation "io.insert-koin:koin-test-junit4:3.5.3"
    androidTestImplementation "io.insert-koin:koin-test:3.5.3"
    androidTestImplementation "io.insert-koin:koin-test-junit4:3.5.3"
    
    // Kakao и Kaspresso
    androidTestImplementation "com.kaspersky.android-components:kaspresso:1.4.0"
    androidTestImplementation "io.github.kakaocup:kakao:3.0.6"
}
